app/main/default/objects/BigQuery_Export_Object__c/BigQuery_Export_Object__c.object-meta.xml
<CustomObject>
    <description>Information about each object that will get sent to BigQuery for a given export schedule.</description>
    <label>BigQuery Export Object</label>
    <nameField>
        <displayFormat>BQXO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BigQuery Export Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>