app/main/default/objects/BigQuery_Export_Object__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>1000</defaultValue>
    <inlineHelpText>How many records to export in a single insert</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>