app/main/default/objects/BigQuery_Export_Object__c/fields/BigQuery_Export__c.field-meta.xml
<CustomField>
    <fullName>BigQuery_Export__c</fullName>
    <description>The BigQuery Export (schedule) that this object will be exported to BigQuery on.</description>
    <label>BigQuery Export</label>
    <referenceTo>BigQuery_Export__c</referenceTo>
    <relationshipLabel>BigQuery Export Objects</relationshipLabel>
    <relationshipName>BigQuery_Export_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>