app/main/default/objects/BigQuery_Export_Object__c/fields/Dataset_ID__c.field-meta.xml
<CustomField>
    <fullName>Dataset_ID__c</fullName>
    <description>The BigQuery Dataset where this data will be exported to.</description>
    <inlineHelpText>The BigQuery Dataset where this data will be exported to.</inlineHelpText>
    <label>Dataset ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>