app/main/default/objects/BigQuery_Export_Object__c/fields/Last_Run_Duration__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Duration__c</fullName>
    <formula>IF( OR( ISBLANK( Last_Run_Finished__c ), ISBLANK( Last_Run_Start__c ) ), 0,  ( Last_Run_Finished__c - Last_Run_Start__c ) * 24 * 60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of minutes that the job took to run.</inlineHelpText>
    <label>Last Run Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>