app/main/default/objects/BigQuery_Export_Object__c/fields/Last_Run_Finished__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Finished__c</fullName>
    <label>Last Run Finished</label>
    <type>DateTime</type>
</CustomField>