app/main/default/objects/BigQuery_Export_Object__c/fields/Last_Run_Start__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Start__c</fullName>
    <label>Last Run Start</label>
    <type>DateTime</type>
</CustomField>