app/main/default/objects/BigQuery_Export_Object__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object name is extracted from the SOQL query.</description>
    <inlineHelpText>The object that will be exported.</inlineHelpText>
    <label>Object</label>
    <length>120</length>
    <type>Text</type>
</CustomField>