app/main/default/objects/BigQuery_Export_Object__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>The BigQuery Project ID where the object data will be exported to.</description>
    <inlineHelpText>The BigQuery Project ID where the object data will be exported to.</inlineHelpText>
    <label>Project ID</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>