app/main/default/objects/BigQuery_Export_Object__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The SOQL query to run when exporting this object</description>
    <inlineHelpText>The SOQL query to run when exporting this object</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>