app/main/default/objects/BigQuery_Export_Object__c/fields/Table_ID__c.field-meta.xml
<CustomField>
    <fullName>Table_ID__c</fullName>
    <description>The BigQuery Table ID that this data will be exported to.</description>
    <inlineHelpText>The BigQuery Table ID that this data will be exported to.</inlineHelpText>
    <label>Table ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>